# Odyseus-SDK

./: .gitignore  README.md  connect.ps1  pyproject.toml  readme.md  upload.ps1
Examples/rasbperry_pi/: motor_controller.py  pi_client.py  requirements.txt  run.sh
Examples/unreal_sim/: requirements.txt  unreal_client.py
MercuriusTech/: __init__.py  odyseus.py  webrtc.py
examples/raspberry_pi/: live_video.py  single_image.py
examples/static/: live_video.py  single_image.py
examples/unreal_sim/: _bridge.py  live_video.py  requirements.txt  single_image.py  unreal_client.py
odyseus/: __init__.py  client.py  unreal.py  webrtc.py
