[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mercuriustech"
version = "0.1.0"
description = "The official Python SDK for the MercuriusTech Odyseus API."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.13.3",
    "aiortc>=1.14.0",
    "av>=16.1.0",
    "pillow>=12.1.1",
    "websockets>=12.0"
]

[tool.setuptools.packages.find]
include = ["MercuriusTech*"]